Novos Exercicios e Praticas

--- a/Desafio3.html
+++ b/Desafio3.html
@@ -4,7 +4,7 @@
 </head>
     <body>
         <script>
-            skills = ["ReactJS", "React Native"];
+            skills = ["Javascript", "ReactJS", "React Native"];
             
             function temHabilidade(skills){
                /* for(i = 0; i <= skills.length; i++){
